# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: superlinter.yml
gendiff/: __init__.py  arg_parse.py  build_diff.py  constans.py  diff.py  file1.json  file2.json  format.py  gendiff.py  get_args.py  get_parse.py
gendiff/files/: file1.yml  file5.yaml  file6.yaml  file_yml1.yml
gendiff/formatters/: plain.py  render_json.py  render_plain.py  render_stylish.py
gendiff/scripts/: gendiff.py
gendiff/stylish/: plain.py
tests/: test_ conclusion.py  test_2json.py  test_flat_files.py  test_generation_diff.py  test_json.py  test_plain.py  test_recursive .py  test_yml.py
tests/fixtures/: file_test2.yml  json.txt  test_json.txt
